--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Javed Ahmad</title>
+        <!--Meta Tags-->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
+</html>
