--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vincent Sitzmann</title>
+    <title>Javed Ahmad</title>
 
     <!-- Meta tags -->
     <meta charset="utf-8">
