--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <div class="col">
                   <div id='header-text-name'>
-                      Vincent Sitzmann
+                      Javed Ahmad
                   </div>
                     <div id='header-text-title'>
                         Assistant Professor </br>
