--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                       Javed Ahmad
                   </div>
                     <div id='header-text-title'>
-                        PhD </br>
-                        Principal investigator, <a href="https://www.scenerepresentations.org">Scene Representation Group</a>
+                        Ph.D. Student </br>
+                        Doctoral Researcher, <a href="https://pavis.iit.it/">Pattern Analysis and Computer Vision (PAVIS)</a> </br>
+                        <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit)</a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                        MIT Department of <a href="https://www.eecs.mit.edu/">Electrical Engineering & Computer Science</a></br>
-                        <a href="https://www.csail.mit.edu/">Computer Science and Artificial Intelligence Laboratory</a> (CSAIL)
+                        University Affiliation: <a href="http://www.diten.unige.it/index.php?lang=en"> DITEN, University of Genoa, Italy</a></br>
                     </div>
                   <div id='header-text-email'>
                         javed.ahmad (at) iit (dot) it
@@ -106,7 +106,7 @@
                   <div>
                     <a href="https://github.com/javi-99">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=FSBvCO4AAAAJ&hl=en">[Google Scholar]</a>
-                    <a href="linkedin.com/in/javed-ahmad-4692384a">[LinkedIn]</a>
+                    <a href="https://linkedin.com/in/javed-ahmad-4692384a">[LinkedIn]</a>
                     <a href="https://twitter.com/javedsial91">[Twitter]</a>
                     <!--<a href="https://sigmoid.social/@vsitzmann">[Mastodon]</a> -->
                     <a href="docs/cv_javed_ahmad.pdf">[Download CV]</a>
@@ -123,13 +123,10 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am an Assistant Professor at MIT EECS, where I am leading the
-                    <a href="https://www.scenerepresentations.org">Scene Representation Group</a>. Previously, I did my Ph.D. at Stanford University
-                    as well as a Postdoc at MIT CSAIL.
-                    My research interest lies in neural scene representations - the way neural networks learn to represent information on our world.
-                    My goal is to allow independent agents to reason about our world given visual observations,
-                    such as inferring a complete model of a scene with information on geometry, material, lighting etc.
-                    from only few observations, a task that is simple for humans, but currently impossible for AI.
+                    I am Ph.D. student at <a href="https://pavis.iit.it/"> PAVIS Lab, iit </a>, where I am working in 
+                    3D scene understanding with geometric and deep learning reasoning. My research interests lies in 3D objects localization and detection from single 
+                    or multimodalities. Currently working on multimodal fusion strategy - learn to represent modalities information at feature level, such as complementing image and LiDAR
+                    informations in the defined spatial shape with multimodal fusion network.
                 </p>
 
 <!--                <h1>Looking for graduate students!</h1>-->
