--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <p>
                     I am Ph.D. student at <a href="https://pavis.iit.it/"> PAVIS Lab, iit </a>, where I am working in 
                     3D scene understanding with geometric and deep learning reasoning. My research interests lies in 3D objects localization and detection from single 
-                    or multimodalities. Currently working on multimodal fusion strategy - learn to represent modalities information at feature level, such as complementing image and LiDAR
-                    informations in the defined spatial shape with multimodal fusion network.
+                    or multimodalities. Currently working on multimodal fusion strategy - a new way of learning to represent modalities information 
+                    at feature level to complement sensors(image and LiDAR) deficiencies.
                 </p>
 
 <!--                <h1>Looking for graduate students!</h1>-->
