--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     I am Ph.D. student at <a href="https://pavis.iit.it/"> PAVIS Lab, iit </a>, where I am working in 
                     3D scene understanding with geometric and deep learning reasoning. My research interests lies in 3D objects localization and detection from single 
                     or multimodalities. Currently working on multimodal fusion strategy - a new way of learning to represent modalities information 
-                    at feature level to complement sensors(image and LiDAR) deficiencies.
+                    at feature level to complement sensors (image and LiDAR) deficiencies.
                 </p>
 
 <!--                <h1>Looking for graduate students!</h1>-->
@@ -138,18 +138,17 @@
 <!--                    deadline is December 15th 2022!-->
 <!--                </p>-->
 
-<!--                <div class='vspace-top'>-->
-<!--                    <h1>News</h1>-->
-<!--                </div>-->
-
-<!--                &lt;!&ndash;- List of news -&#45;&#45;!>-->
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        March 2022-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        My group website is now online - check i to -->
-<!--                    </div>-->
+                <div class='vspace-top'>
+                    <h1>News</h1>
+                </div>
+                    &lt;!&ndash;- List of news -&#45;&#45;!>
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        March 2022
+                    </div>
+                    <div class="col">
+                        My group website is now online - check i to
+                    </div>
 <!--                    -->
 <!--                    <div class="col-sm-2 news-date">-->
 <!--                        June 2021-->
@@ -235,7 +234,7 @@
 <!--                        I will join Prof. Noah Snavely's group at the Google NYC office over the summer and continue working-->
 <!--                        on  deep learning for scene understanding and novel view synthesis.-->
 <!--                    </div>-->
-<!--                </div>-->
+                </div>
 
 
                 <div class='vspace-top'>
