--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
                 <div class='vspace-top'>
                     <h1>News</h1>
-                </div>
-                    &lt;!&ndash;- List of news -&#45;&#45;!>
+                </div> 
+                <!--    &lt;!&ndash;- List of news -&#45;&#45;!> -->
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         March 2022
