--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div id='header-text-title'>
                         Ph.D. Student </br>
                         Doctoral Researcher, <a href="https://pavis.iit.it/">Pattern Analysis and Computer Vision (PAVIS)</a> </br>
-                        <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit)</a> </br>
+                        Lab at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit) , Genoa, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
                         University Affiliation: <a href="http://www.diten.unige.it/index.php?lang=en"> DITEN, University of Genoa, Italy</a></br>
@@ -144,10 +144,35 @@
                 <!--    &lt;!&ndash;- List of news -&#45;&#45;!> -->
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
-                        March 2022
+                        July 2023
                     </div>
                     <div class="col">
-                        My group website is now online - check i to
+                        I would be joining ICVSS summer school at Catania, Sicily
+                    </div>
+                    <div class="col-sm-2 news-date">
+                        January 2023
+                    </div>
+                    <div class="col">
+                        Our journal paper "Fill in the blank for fashion complementary outfit product Retrieval:
+                        VISUM summer school competition" has been published
+                    </div>
+                    <div class="col-sm-2 news-date">
+                        May 2022
+                    </div>
+                    <div class="col">
+                        I attended ICIAP conference at Lecce and presented my paper
+                    </div>
+                    <div class="col-sm-2 news-date">
+                        May 2021
+                    </div>
+                    <div class="col">
+                        My Team "Json" won the project competition "Fashion Complementary Outfit Product Retrieval" among all participants at VISUM summer school 
+                    </div>
+                    <div class="col-sm-2 news-date">
+                        July 2020
+                    </div>
+                    <div class="col">
+                        My Team "3-2-1-D Band" won unconference project idea competition among all participants at EEML summer school 
                     </div>
 <!--                    -->
 <!--                    <div class="col-sm-2 news-date">-->
@@ -237,60 +262,50 @@
                 </div>
 
 
-                <div class='vspace-top'>
-                    <h1>Publications</h1>
-                </div>
-
-                <!--- List of publications --->
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="imgs/diffusion_teaser.mp4" type="video/mp4">
-                        </video>
+                        <img src='imgs/product_retrieval.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
                         <div class='paper-title'>
-                            Diffusion with Forward Models: Solving Stochastic Inverse Problems Without Direct Supervision
+                            Fill in the blank for fashion complementary outfit product retrieval:VISUM summer school competition
                         </div>
                         <div class='paper-desc'>
-                            arXiv 2023
+			                Machine Vision and Applications (2023) <b>Honorable Mention "My Team: Json Achieved Highest"</b>)
                         </div>
                         <div class='paper-authors'>
-                            Ayush Tewari*, Tianwei Yin*, George Cazenavette, Joshua B. Tenenbaum, Fredo Durand, William T. Freeman, <u>Vincent Sitzmann</u>
+                            Eduardo Castro,..., <u>Javed Ahmad</u>,..., Sofia Beco
                         </div>
                         <div>
-                            <a href="https://diffusion-with-forward-models.github.io/">[Project page]</a>
-                            <a href="https://diffusion-with-forward-models.github.io/diffusion-forward-paper.pdf">[Paper]</a>
+                            <a href="https://link.springer.com/article/10.1007/s00138-022-01359-x">[paper]</a>
+			                <a href="https://github.com/visum-summerschool/visum-competition2021">[Code]</a>
                         </div>
                     </div>
                 </div>
 
-
-                <!--- next --->
-
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/SRNs.gif' class='img-fluid'>
+                        <img src='imgs/iciap2021.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
                         <div class='paper-title'>
-                            Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations
+                            Multi-view 3D Objects Localization from Street-Level Scenes
                         </div>
                         <div class='paper-desc'>
-			    NeurIPS 2019 (Oral, <b>Honorable Mention "Outstanding New Directions"</b>)
+			                ICIAP (2022) <b>Honorable Mention "Memex Project"</b>)
                         </div>
                         <div class='paper-authors'>
-                            <u>Vincent Sitzmann</u>, Michael Zollhöfer, Gordon Wetzstein
+                            <u>Javed Ahmad</u>, Matteo Toso, Matto Taiana, Stuart James, Alessio Del Bue
                         </div>
                         <div>
-                            <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
-                            <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
-			    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
+                            <a href="https://link.springer.com/chapter/10.1007/978-3-031-06430-2_8">[paper]</a>
+			                <a href="https://github.com/javi-99/Multi-view-3D-Objects-Localization-from-Street-level-Scenes">[Code]</a>
                         </div>
                     </div>
                 </div>
+
 
 
 
