--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
                         July 2023
                     </div>
                     <div class="col">
-                        I would be joining ICVSS summer school at Catania, Sicily
+                        I am thrilled to announce that I will be joining I would be joining ICVSS summer school at Catania, Sicily
                     </div>
+                </div>
+                
+                <div class='row vspace-top-news'></div>
                     <div class="col-sm-2 news-date">
                         January 2023
                     </div>
@@ -156,25 +159,36 @@
                         Our journal paper "Fill in the blank for fashion complementary outfit product Retrieval:
                         VISUM summer school competition" has been published
                     </div>
+                </div>
+
+                <div class='row vspace-top-news'></div>
                     <div class="col-sm-2 news-date">
                         May 2022
                     </div>
                     <div class="col">
                         I attended ICIAP conference at Lecce and presented my paper
                     </div>
+                </div>
+
+                <div class='row vspace-top-news'></div>
                     <div class="col-sm-2 news-date">
                         May 2021
                     </div>
                     <div class="col">
                         My Team "Json" won the project competition "Fashion Complementary Outfit Product Retrieval" among all participants at VISUM summer school 
                     </div>
+                </div>
+
+                <div class='row vspace-top-news'></div>
                     <div class="col-sm-2 news-date">
                         July 2020
                     </div>
                     <div class="col">
                         My Team "3-2-1-D Band" won unconference project idea competition among all participants at EEML summer school 
                     </div>
-<!--                    -->
+                </div>
+
+                    <!--                    -->
 <!--                    <div class="col-sm-2 news-date">-->
 <!--                        June 2021-->
 <!--                    </div>-->
@@ -260,7 +274,9 @@
 <!--                        on  deep learning for scene understanding and novel view synthesis.-->
 <!--                    </div>-->
                 </div>
-
+                <div class='vspace-top'>
+                    <h1>Publications</h1>
+                </div>
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
