--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 
-                <div class='row vspace-top-news'></div>
+                <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         January 2023
                     </div>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'></div>
+                <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         May 2022
                     </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'></div>
+                <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         May 2021
                     </div>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'></div>
+                <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         July 2020
                     </div>
@@ -288,10 +288,13 @@
                             Fill in the blank for fashion complementary outfit product retrieval:VISUM summer school competition
                         </div>
                         <div class='paper-desc'>
-			                Machine Vision and Applications (2023) <b>Honorable Mention "My Team: Json Achieved Highest"</b>)
+			                Machine Vision and Applications (2023) </br>
+                            <b>Honorable Mention "My Team: Json Achieved Highest"</b>
                         </div>
                         <div class='paper-authors'>
-                            Eduardo Castro,..., <u>Javed Ahmad</u>,..., Sofia Beco
+                            Eduardo Castro, Pedro M. Ferreira, Ana Rebelo, Isabel Rio-Torto, Leonardo Capozzi, Mafalda Falcão Ferreira, Tiago Gonçalves, Tomé Albuquerque,
+                            Wilson Silva, Carolina Afonso 2, Ricardo Gamelas Sousa, Claudio Cimarelli, Nadia Daoudi,  Gabriel Moreira,  Hsiu-yu Yang, Ingrid Hrga, 
+                            <u>Javed Ahmad</u>, Monish Keswani, Sofia Beco
                         </div>
                         <div>
                             <a href="https://link.springer.com/article/10.1007/s00138-022-01359-x">[paper]</a>
@@ -310,7 +313,8 @@
                             Multi-view 3D Objects Localization from Street-Level Scenes
                         </div>
                         <div class='paper-desc'>
-			                ICIAP (2022) <b>Honorable Mention "Memex Project"</b>)
+			                ICIAP (2022)</br>
+                            <b>Honorable Mention "Memex Project"</b>
                         </div>
                         <div class='paper-authors'>
                             <u>Javed Ahmad</u>, Matteo Toso, Matto Taiana, Stuart James, Alessio Del Bue
