--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         July 2023
                     </div>
                     <div class="col">
-                        I am thrilled to announce that I will be joining I would be joining ICVSS summer school at Catania, Sicily
+                        I am thrilled to announce that I will be joining ICVSS summer school at Catania, Sicily
                     </div>
                 </div>
                 
@@ -274,7 +274,7 @@
 <!--                        on  deep learning for scene understanding and novel view synthesis.-->
 <!--                    </div>-->
                 </div>
-            </div>
+            
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
