--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="col">
                         My Team "3-2-1-D Band" won unconference project idea competition among all participants at EEML summer school 
                     </div>
-                </div> </br>
+                </div>
 
                     <!--                    -->
 <!--                    <div class="col-sm-2 news-date">-->
@@ -274,7 +274,7 @@
 <!--                        on  deep learning for scene understanding and novel view synthesis.-->
 <!--                    </div>-->
                 </div>
-            
+            </div>
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
