--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         </div>
                         <div class='paper-desc'>
 			                Machine Vision and Applications (2023) </br>
-                            <b>Honorable Mention "My Team: Json Achieved Highest"</b>
+                            <b>Honorable Mention "My Team: Json Achieved Highest Accuracy"</b>
                         </div>
                         <div class='paper-authors'>
                             Eduardo Castro, Pedro M. Ferreira, Ana Rebelo, Isabel Rio-Torto, Leonardo Capozzi, Mafalda Falcão Ferreira, Tiago Gonçalves, Tomé Albuquerque,
