--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         </div>
                         <div class='paper-desc'>
 			                ICIAP (2022)</br>
-                            <b>Honorable Mention "Memex Project"</b>
+                            <b>Memex Project: European Union's Horizon 2020 research and innovation programme </b>
                         </div>
                         <div class='paper-authors'>
                             <u>Javed Ahmad</u>, Matteo Toso, Matto Taiana, Stuart James, Alessio Del Bue
