--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
                 <!--    &lt;!&ndash;- List of news -&#45;&#45;!> -->
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        November 2023
+                    </div>
+                    <div class="col">
+                        The preprint of My recent work: "mmFUSION:Multimodal Fusion for 3D object detection" is availeble on <a href="https://arxiv.org/abs/2311.04058"> arXiv </a> 
+                    </div>
+                </div>
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         July 2023
                     </div>
                     <div class="col">
