--- a/index.html
+++ b/index.html
@@ -202,6 +202,30 @@
                     <h1>Publications</h1>
                 </div>
 
+
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img src='imgs/mmFUSION.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            mmFUSION: Multi-modal Fusion for 3D Objects Detection
+                        </div>
+                        <div class='paper-desc'>
+			                arXiv (2023) </br>
+                        </div>
+                        <div class='paper-authors'> 
+                            <u>Javed Ahmad</u>, Alessio Del Bue
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2311.04058">[paper]</a>
+			                Code will be public soon
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img src='imgs/product_retrieval.png' class='img-fluid'>
