--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               margin-top: 15px;
           }
           .paper-image {
-            width: 150px;
+            width: 400px;
           }
           .news-date {
               font-weight: bold;
@@ -204,7 +204,7 @@
 
 
                 <div class='row vspace-top'>
-                    <div class="col-sm-3">
+                    <div class='paper-image'>
                         <img src='imgs/mmFUSION.png' class='img-fluid'>
                     </div>
 
@@ -227,7 +227,7 @@
 
 
                 <div class='row vspace-top'>
-                    <div class="col-sm-3">
+                    <div class='paper-image'>
                         <img src='imgs/product_retrieval.png' class='img-fluid'>
                     </div>
 
@@ -252,7 +252,7 @@
                 </div>
 
                 <div class='row vspace-top'>
-                    <div class="col-sm-3">
+                    <div class='paper-image'>
                         <img src='imgs/iciap2021.png' class='img-fluid'>
                     </div>
 
