--- a/index.html
+++ b/index.html
@@ -123,10 +123,8 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am Ph.D. student at <a href="https://pavis.iit.it/"> PAVIS Lab, iit </a>, where I am working in 
-                    3D scene understanding with geometric and deep learning reasoning. My research interests lies in 3D objects localization and detection from single 
-                    or multimodalities. Currently working on multimodal fusion strategy - a new way of learning to represent modalities information 
-                    at feature level to complement sensors (image and LiDAR) deficiencies.
+                    I am a PostDoc. researcher at <a href="https://ccht.iit.it/"> Center for Cultural Heritage Technology, iit </a>, where I am working on 
+                    advanced neural approaches for 3D object reconstruction and robotic perception. Previously, I worked on 3D object localization and detection from single (camera images) or multi-modalities (LiDAR-Camera), where I developed an intermediate level multi-modal fusion scheme.    
                 </p>
 
 <!--                <h1>Looking for graduate students!</h1>-->
