--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                       Javed Ahmad
                   </div>
                     <div id='header-text-title'>
-                        Ph.D. Student </br>
-                        Doctoral Researcher, <a href="https://pavis.iit.it/">Pattern Analysis and Computer Vision (PAVIS)</a> </br>
-                        Lab at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit) , Genoa, Italy </a> </br>
+                        PostDoc. Researcher </br>
+                        <a href="https://ccht.iit.it/">Center for Cultural Heritage Technology (CCHT)</a> </br>
+							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
                         University Affiliation: <a href="http://www.diten.unige.it/index.php?lang=en"> DITEN, University of Genoa, Italy</a></br>
