--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                         javed.ahmad (at) iit (dot) it
                   </div>
                   <br><br>
-                  <div>
-                    <a href="https://github.com/javi-99">[GitHub]</a>
-                    <a href="https://scholar.google.com/citations?user=FSBvCO4AAAAJ&hl=en">[Google Scholar]</a>
-                    <a href="https://linkedin.com/in/javed-ahmad-4692384a">[LinkedIn]</a>
+                  <div class="center">
+                    <a href="https://github.com/javi-99"> GitHub </a> &ensp;/&ensp;
+                    <a href="https://scholar.google.com/citations?user=FSBvCO4AAAAJ&hl=en"> Google Scholar </a> &ensp;/&ensp;
+                    <a href="https://linkedin.com/in/javed-ahmad-4692384a"> LinkedIn </a> &ensp;/&ensp;
                     <a href="https://twitter.com/javedsial91">[Twitter]</a>
                     <!--<a href="https://sigmoid.social/@vsitzmann">[Mastodon]</a> -->
                     <a href="docs/cv_javed_ahmad.pdf">[Download CV]</a>
