--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                     <a href="https://github.com/javi-99"> GitHub </a> &ensp;/&ensp;
                     <a href="https://scholar.google.com/citations?user=FSBvCO4AAAAJ&hl=en"> Google Scholar </a> &ensp;/&ensp;
                     <a href="https://linkedin.com/in/javed-ahmad-4692384a"> LinkedIn </a> &ensp;/&ensp;
-                    <a href="https://twitter.com/javedsial91">[Twitter]</a> &ensp;/&ensp;
+                    <a href="https://twitter.com/javedsial91"> Twitter </a> &ensp;/&ensp;
                     <!--<a href="https://sigmoid.social/@vsitzmann">[Mastodon]</a> -->
-                    <a href="docs/cv_javed_ahmad.pdf">[Download CV]</a>
+                    <a href="docs/cv_javed_ahmad.pdf"> Download CV </a>
                   </div>
 
                 </div>
