--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                        University Affiliation: <a href="http://www.diten.unige.it/index.php?lang=en"> DITEN, University of Genoa, Italy</a></br>
+                        PhD: <a href=""> Pattern Analysis and Computer Vision (PAVIS), IIT, Italy</a></br>
                     </div>
                   <div id='header-text-email'>
                         javed.ahmad (at) iit (dot) it
@@ -124,8 +124,9 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am a PostDoc. researcher at <a href="https://ccht.iit.it/"> Center for Cultural Heritage Technology, iit </a>, where I am working on 
-                    advanced neural approaches for 3D object reconstruction and robotic perception. Previously, I worked on 3D object localization and detection from single (camera images) or multi-modalities (LiDAR-Camera), where I developed an intermediate level multi-modal fusion scheme.    
+                Hi,</br>
+I am a Postdoctoral Researcher currently working on 3D reconstruction using robotic manipulators at <a href="https://ccht.iit.it/"> Center for Cultural Heritage Technology, IIT, Italy.</a> I completed my PhD at the PAVIS Lab, IIT, where I specialized in 3D object detection and multimodal fusion for enhanced 3D scene perception.
+I'm always open to collaboration on research and projects that align with mutual goals. Feel free to reach out.    
                 </p>
 
 <!--                <h1>Looking for graduate students!</h1>-->
