--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
                     <div id='header-text-title'>
                         PostDoc. Researcher </br>
                         <a href="https://ccht.iit.it/">Center for Cultural Heritage Technology (CCHT)</a> </br>
-							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (iit) , Venice, Italy </a> </br>
+							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                        PhD: <a href=""> Pattern Analysis and Computer Vision (PAVIS), IIT, Italy</a></br>
+                        3D Computer Vision, Deep Learning, Multimodal 3D Scene Perception </br>
+                        Robotic Manipulation and 3D Reconstruction
                     </div>
                   <div id='header-text-email'>
                         javed.ahmad (at) iit (dot) it
@@ -125,7 +126,7 @@
                 <h1>Bio</h1>
                 <p>
                 Hi,</br>
-I am a Postdoctoral Researcher currently working on 3D reconstruction using robotic manipulators at <a href="https://ccht.iit.it/"> Center for Cultural Heritage Technology, IIT, Italy.</a> I completed my PhD at the PAVIS Lab, IIT, where I specialized in 3D object detection and multimodal fusion for enhanced 3D scene perception.
+I am a Postdoctoral Researcher currently working on 3D reconstruction using robotic manipulators at <a href="https://ccht.iit.it/"> CCHT, IIT, Italy.</a> I completed my PhD at the PAVIS Lab, IIT, where I specialized in 3D object detection and multimodal fusion for enhanced 3D scene perception.
 I'm always open to collaboration on research and projects that align with mutual goals. Feel free to reach out.    
                 </p>
 
