--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
 							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                        3D Computer Vision, Deep Learning, Multimodal 3D Scene Perception </br>
+                    <h1>Research Interests</h1>
+                        3D Computer Vision and Deep Learning </br>
+                        Multimodal 3D Scene Perception </br>
                         Robotic Manipulation and 3D Reconstruction
                     </div>
                   <div id='header-text-email'>
