--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
 							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                    <h1>Research Interests</h1>
-                        3D Computer Vision and Deep Learning </br>
-                        Multimodal 3D Scene Perception </br>
-                        Robotic Manipulation and 3D Reconstruction
+                    <div class='col offset-sm-1'>
+                    	<h1>Research Interests</h1>
+                        	3D Computer Vision and Deep Learning </br>
+                        	Multimodal 3D Scene Perception </br>
+                       		Robotic Manipulation and 3D Reconstruction
                     </div>
                   <div id='header-text-email'>
                         javed.ahmad (at) iit (dot) it
