--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@ I'm always open to collaboration on research and projects that align with mutual
                 <!--    &lt;!&ndash;- List of news -&#45;&#45;!> -->
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        September 2024
+                    </div>
+                    <div class="col">
+                        We presented "AAPOE: Automated Artifacts Position and Orientation 
+                        Estimation in cultural Heritage" at   <a href="https://mesa2024.org/final-programme/"> IEEE/ASME MESA 2024 </a> 
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         November 2023
                     </div>
                     <div class="col">
@@ -199,10 +209,39 @@ I'm always open to collaboration on research and projects that align with mutual
                     </div>
                 </div>
 
+
+
+
+
+
+
+
+
                 <!--  List of Publications    -->
                 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class='paper-image'>
+                        <img src='imgs/AAPOE_teaser.mp4' class='img-fluid'>
+                    </div>
+                    <div class="col">
+                        <div class='paper-title'>
+                            AAPOE: Automated Artifacts Positions and Orientations Estimation in Cultural Heritage
+                        </div>
+                        <div class='paper-desc'>
+			                IEEE/ASME MESA 2024 </br>
+                        </div>
+                        <div class='paper-authors'> 
+                            <u>Javed Ahmad</u>, el al.
+                        </div>
+                        <div>
+			                Preprint will be availabe soon
+                        </div>
+                    </div>
                 </div>
 
 
@@ -223,7 +262,7 @@ I'm always open to collaboration on research and projects that align with mutual
                         </div>
                         <div>
                             <a href="https://arxiv.org/abs/2311.04058">[paper]</a>
-			                Code will be public soon
+			                Code can be request through emailing to me
                         </div>
                     </div>
                 </div>
