--- a/index.html
+++ b/index.html
@@ -225,8 +225,10 @@ I'm always open to collaboration on research and projects that align with mutual
 
 
                 <div class='row vspace-top'>
-                    <div class='paper-image'>
-                        <img src='imgs/AAPOE_teaser.mp4' class='img-fluid'>
+                    <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="col">
                         <div class='paper-title'>
