--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                        <video width="200%" height="200%" playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
                         </video>
                     </div>
