--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video width="200%" height="200%" playsinline="" autoplay="" loop="" preload="" muted="">
+                        <video width="100%" height="100%" playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -248,7 +248,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
 
                 <div class='row vspace-top'>
-                    <div class='paper-image'>
+                    <div class="col-sm-3">
                         <img src='imgs/mmFUSION.png' class='img-fluid'>
                     </div>
 
@@ -271,7 +271,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
 
                 <div class='row vspace-top'>
-                    <div class='paper-image'>
+                    <div class="col-sm-3">
                         <img src='imgs/product_retrieval.png' class='img-fluid'>
                     </div>
 
@@ -296,7 +296,7 @@ I'm always open to collaboration on research and projects that align with mutual
                 </div>
 
                 <div class='row vspace-top'>
-                    <div class='paper-image'>
+                    <div class="col-sm-3">
                         <img src='imgs/iciap2021.png' class='img-fluid'>
                     </div>
 
