--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video width="150%" height="150%" playsinline="" autoplay="" loop="" preload="" muted="">
+                        <video playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -249,7 +249,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img width="150%" height="150%" src='imgs/mmFUSION.png' class='img-fluid'>
+                        <img src='imgs/mmFUSION.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -272,7 +272,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img width="150%" height="150%" src='imgs/product_retrieval.png' class='img-fluid'>
+                        <img src='imgs/product_retrieval.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -297,7 +297,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img width="150%" height="150%" src='imgs/iciap2021.png' class='img-fluid'>
+                        <img src='imgs/iciap2021.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -317,6 +317,20 @@ I'm always open to collaboration on research and projects that align with mutual
                         </div>
                     </div>
                 </div>
+
+                <style>
+                    /* Zoom for all images */
+                    img {
+                        width: 150%;
+                        height: auto; /* Keeps the aspect ratio */
+                    }
+
+                    /* Zoom for all videos */
+                    video {
+                        width: 150%;
+                        height: auto; /* Keeps the aspect ratio */
+                    }
+                </style>
 
 
 
