--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video playsinline="" autoplay="" loop="" preload="" muted="">
+                        <video  playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -317,21 +317,20 @@ I'm always open to collaboration on research and projects that align with mutual
                         </div>
                     </div>
                 </div>
-
+                
                 <style>
-                    /* Zoom for all images */
-                    img {
-                        width: 150%;
-                        height: auto; /* Keeps the aspect ratio */
-                    }
-
                     /* Zoom for all videos */
                     video {
-                        width: 150%;
-                        height: auto; /* Keeps the aspect ratio */
+                        width: 100%;
+                        height: 100%; /* Keeps the aspect ratio */
                     }
-                </style>
+                    /* Zoom for all images */
+                    img {
+                        width: 100%;
+                        height: 100%; /* Keeps the aspect ratio */
+                    }
 
+                </style>
 
 
 
