--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
 							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT) , Venice, Italy </a> </br>
                     </div>
                     <div id='header-text-affiliation'>
-                    <h1>Research Interests</h1>
+                    <div class='header-text-title'>
+                        Research Interests: </br>
+                    </div>
                         3D Computer Vision & Deep Learning </br>
                         Multimodal 3D Scene Perception </br>
                         Robotic Manipulation and 3D Reconstruction
