--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@
                         PostDoc. Researcher </br>
                         <a href="https://ccht.iit.it/">Center for Cultural Heritage Technology (CCHT)</a> </br>
 							at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT) , Venice, Italy </a> </br>
-                    </div>
-                    <div id='header-text-affiliation'>
+                        </br>
                     <div class='header-text-title'>
-                        Research Interests: </br>
+                        <span style="font-weight: bold; font-size: 1.2em;">Research Interests:</span> </br>
                     </div>
-                        3D Computer Vision & Deep Learning </br>
-                        Multimodal 3D Scene Perception </br>
-                        Robotic Manipulation and 3D Reconstruction
+                    <ul>
+                        <li>3D Computer Vision & Deep Learning </br>
+                        <li>Multimodal 3D Scene Perception </br>
+                        <li>Robotic Manipulations and 3D Reconstruction
+                    </ul>
                     </div>
                   <div id='header-text-email'>
                         javed.ahmad (at) iit (dot) it
